# schemainspect

./: .gitignore  README.md  devenv.nix  package.nix  pyproject.toml
nix/dependencies/: sqlbag.nix
schemainspect/: command.py  inspected.py  inspector.py  misc.py
schemainspect/graphlib/: __init__.py
schemainspect/pg/: obj.py
schemainspect/pg/sql/: agg_functions.sql  collations.sql  collations9.sql  comments.sql  constraints.sql  deps.sql  domains.sql  enums.sql  extensions.sql  functions.sql  indexes.sql  privileges.sql  relations.sql  relations9.sql  rlspolicies.sql  schemas.sql  sequences.sql  triggers.sql  types.sql
tests/: conftest.py  test_all.py  test_collations.py  test_deps.py  test_deps_fk.py  test_excludeschema.py  test_exclusion.py  test_funcs.py  test_indexes.py  test_inheritance.py  test_partitioning.py  test_rls.py  test_singleschema.py  test_triggers.py  test_types.py
