[project]
name = "schemainspect"
version = "3.1"
description = "Schema inspection for PostgreSQL (and possibly others)"
authors = [{ name = "Robert Lechte", email = "robertlechte@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Unlicense"
dependencies = ["sqlalchemy"]

[project.urls]
Homepage = "https://github.com/djrobstep/schemainspect"
Repository = "https://github.com/djrobstep/schemainspect"

[project.scripts]
schemainspect = "schemainspect:do_command"

[dependency-groups]
dev = [
    "sqlbag",
    "pytest",
    "pytest-cov",
    "pytest-clarity",
]
[tool.uv.sources]
sqlbag = { git = "https://github.com/joshainglis/sqlbag", branch = "master" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
