[project]
name = "schemainspect"
version = "4.0.0"
description = "Schema inspection for PostgreSQL (and possibly others)"
authors = [{ name = "Robert Lechte", email = "robertlechte@gmail.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "Unlicense"
dependencies = ["sqlalchemy"]

[project.urls]
Homepage = "https://github.com/djrobstep/schemainspect"
Repository = "https://github.com/djrobstep/schemainspect"

[project.scripts]
schemainspect = "schemainspect:do_command"

[dependency-groups]
dev = [
    "sqlbag",
    "pytest",
    "pytest-cov",
]
[tool.uv.sources]
sqlbag = { git = "https://github.com/joshainglis/sqlbag", rev="6e9a5e8f176968b83c7756b95ef475ef8c3163af" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
